# modulus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup_modulus.sh
assets/shaders/: triangle.frag  triangle.vert
examples/: CMakeLists.txt
examples/hello_console/: CMakeLists.txt  main.cpp
examples/hello_window/: CMakeLists.txt  main.cpp
include/modulus/audio/: audio.hpp
include/modulus/core/: context.hpp  file.hpp  log.hpp  timer.hpp
include/modulus/events/: dispatcher.hpp  event.hpp
include/modulus/gfx/: buffer.hpp  buffer_layout.hpp  graphics.hpp  shader.hpp  texture.hpp  vertex_array.hpp
include/modulus/platform/: input.hpp  platform.hpp  window.hpp
src/: CMakeLists.txt
src/audio/: audio.cpp
src/core/: file.cpp  log.cpp
src/gfx/backends/opengl/: buffer.cpp  gfx_opengl.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/platform/backends/glfw/: glfw_internal.hpp  input_glfw.cpp  platform_glfw.cpp
tests/: CMakeLists.txt  test_main.cpp
